// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi lines contained in a single log block 1`] = `
[
  {
    "bg": 0,
    "bold": false,
    "content": "\\n",
    "fg": 7,
    "underline": false,
  },
  {
    "bg": 0,
    "bold": true,
    "content": " BOLD ",
    "fg": 7,
    "underline": false,
  },
  {
    "bg": 0,
    "bold": false,
    "content": " Underline \\n",
    "fg": 7,
    "underline": true,
  },
  {
    "bg": 7,
    "bold": false,
    "content": " Reversed ",
    "fg": 0,
    "underline": false,
  },
]
`;

exports[`parse bright colors 1`] = `
[
  {
    "bg": 0,
    "bold": false,
    "content": " A ",
    "fg": 8,
    "underline": false,
  },
  {
    "bg": 0,
    "bold": false,
    "content": " B ",
    "fg": 9,
    "underline": false,
  },
  {
    "bg": 0,
    "bold": false,
    "content": " C ",
    "fg": 10,
    "underline": false,
  },
  {
    "bg": 0,
    "bold": false,
    "content": " D ",
    "fg": 11,
    "underline": false,
  },
]
`;

exports[`parse string that includes bg colors 1`] = `
[
  {
    "bg": 0,
    "bold": false,
    "content": " A ",
    "fg": 7,
    "underline": false,
  },
  {
    "bg": 1,
    "bold": false,
    "content": " B ",
    "fg": 7,
    "underline": false,
  },
  {
    "bg": 2,
    "bold": false,
    "content": " C ",
    "fg": 7,
    "underline": false,
  },
  {
    "bg": 3,
    "bold": false,
    "content": " D ",
    "fg": 7,
    "underline": false,
  },
]
`;

exports[`parse string that includes bg colors 2`] = `
[
  {
    "bg": 4,
    "bold": false,
    "content": " A ",
    "fg": 7,
    "underline": false,
  },
  {
    "bg": 5,
    "bold": false,
    "content": " B ",
    "fg": 7,
    "underline": false,
  },
  {
    "bg": 6,
    "bold": false,
    "content": " C ",
    "fg": 7,
    "underline": false,
  },
  {
    "bg": 7,
    "bold": false,
    "content": " D ",
    "fg": 7,
    "underline": false,
  },
]
`;

exports[`parse string that includes fg colors 1`] = `
[
  {
    "bg": 0,
    "bold": false,
    "content": " A ",
    "fg": 0,
    "underline": false,
  },
  {
    "bg": 0,
    "bold": false,
    "content": " B ",
    "fg": 1,
    "underline": false,
  },
  {
    "bg": 0,
    "bold": false,
    "content": " C ",
    "fg": 2,
    "underline": false,
  },
  {
    "bg": 0,
    "bold": false,
    "content": " D ",
    "fg": 3,
    "underline": false,
  },
]
`;

exports[`parse string that includes fg colors 2`] = `
[
  {
    "bg": 0,
    "bold": false,
    "content": " E ",
    "fg": 4,
    "underline": false,
  },
  {
    "bg": 0,
    "bold": false,
    "content": " F ",
    "fg": 5,
    "underline": false,
  },
  {
    "bg": 0,
    "bold": false,
    "content": " G ",
    "fg": 6,
    "underline": false,
  },
  {
    "bg": 0,
    "bold": false,
    "content": " H ",
    "fg": 7,
    "underline": false,
  },
]
`;

exports[`parse string that includes modifier 1`] = `
[
  {
    "bg": 0,
    "bold": true,
    "content": " BOLD ",
    "fg": 7,
    "underline": false,
  },
  {
    "bg": 0,
    "bold": false,
    "content": " Underline ",
    "fg": 7,
    "underline": true,
  },
  {
    "bg": 7,
    "bold": false,
    "content": " Reversed ",
    "fg": 0,
    "underline": false,
  },
]
`;

exports[`parse string that includes modifier 2`] = `
[
  {
    "bg": 7,
    "bold": true,
    "content": " BOLD Underline Reversed ",
    "fg": 0,
    "underline": true,
  },
]
`;

exports[`parse string that includes modifier 3`] = `
[
  {
    "bg": 0,
    "bold": true,
    "content": " Red Bold ",
    "fg": 1,
    "underline": false,
  },
]
`;

exports[`parse string that includes modifier 4`] = `
[
  {
    "bg": 4,
    "bold": false,
    "content": " Blue Background Underline ",
    "fg": 7,
    "underline": true,
  },
]
`;
